Adding login endpoint
